--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,6 +15,9 @@
           <li class="nav-item">
             <a class="nav-link{% if request.resolver_match.url_name == 'new'%} active {% endif %}" href="{% url 'new:new' %}">News</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link{% if request.resolver_match.url_name == 'student'%} active {% endif %}" href="{% url 'student:student' %}">Student</a>
+          </li>
           {% if not request.user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link{% if request.resolver_match.url_name == 'register'%} active {% endif %}" href="{% url 'register:register' %}">Register</a>
